Squashed commit of the following:
commit e780b432a17fc4d2418666c05ceba8b66dfb09e7
Author: Chris H <zenchristo@gmail.com>
Date:   Thu Jun 5 23:27:29 2025 -0400

    Automate patch version increment

commit e035602d9d3144fdcd7352b6084d1d172c460058
Author: GitHub Actions <actions@github.com>
Date:   Fri Jun 6 02:56:13 2025 +0000

    [maven-release-plugin] prepare for next development iteration

commit 08719b1596f21142269d5ac93322f6817d16a94a
Author: GitHub Actions <actions@github.com>
Date:   Fri Jun 6 02:56:11 2025 +0000

    [maven-release-plugin] prepare release forge-2.0.04

commit 840f3ea96c2a2fe73fa6251980ce326439707266
Author: Chris H <zenchristo@gmail.com>
Date:   Thu Jun 5 21:18:10 2025 -0400

    Automate patch version increment

commit 51929434be82435f4b6c7766ae386f40b4e0d4e1
Author: Chris H <zenchristo@gmail.com>
Date:   Wed Jun 4 21:33:21 2025 -0400

    Update flatten to work with full release

commit 3ec480afa4631195e9acc21fb456664b1193d93e
Author: gsonnier333 <gsonnier3@gmail.com>
Date:   Thu Jun 5 15:15:52 2025 -0600

    fixed weapons_vendor.txt power/toughness

commit 3d19e9e44456a99a397525f7f5f59af0c875c034
Author: Chris H <zenchristo@gmail.com>
Date:   Thu Jun 5 17:33:39 2025 -0400

    Update summon_g_f_ifrit.txt

commit 6d987791f708ada61bf8bce121a6457b8408a7db
Author: Renato Filipe Vidal Santos <45150760+dracontes@users.noreply.github.com>
Date:   Thu Jun 5 13:25:08 2025 +0100

    Fixing Animate Dead and similar effects)

commit 7b7da00c22afbd153caa6c75d143cf3f24c52b62
Author: Renato Filipe Vidal Santos <45150760+dracontes@users.noreply.github.com>
Date:   Thu Jun 5 07:54:38 2025 +0100

    Incidental fixes: 2025-06-05

commit 34791bd89223d61c433631a305aa10d0457e3f27
Author: tool4ever <therealtoolkit@hotmail.com>
Date:   Thu Jun 5 08:53:38 2025 +0200

    Update stangg.txt

commit e6bcd1be72ab1d047b4adfc3dcde9d49efd9d3f6
Author: Renato Filipe Vidal Santos <45150760+dracontes@users.noreply.github.com>
Date:   Thu Jun 5 00:55:34 2025 +0100

    A